--- a/index.html
+++ b/index.html
@@ -1,23 +1,105 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
-    <title></title>
-    
-    <style>
-body{
-  background-color: blue;
-}
+    <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <title>Blue Note Records</title>
+  </head>
+  <body>
 
-h1{
-  color:red;
-}
-p{
-  color:yellow;
-}
+    <h1><a href="https://en.wikipedia.org/wiki/Blue_Note_Records"
+      target="_blank"><u>Blue Note Records</u></a></h1>
+
+      <a href="https://en.wikipedia.org/wiki/Blue_Note_Records"><img
+        src="assets/bluenotelogo.png" width="450" alt="Blue Note Logo"></a>
+
+        <div class="sectiondiv">
+        <h2>Contents</h2>
+
+        <ol>
+          <li><a href="#introheader">Introduction</a></li>
+          <li><a href="#historyheader">History</a></li>
+          <li><a href="#legacyheader">Legacy</a></li>
+          <li><a href="#documentaryheader">Documentary Films</a></li>
+        </ol>
+      </div>
+
+      <div class="sectiondiv">
+
+        <h2 id="introheader">Introduction</h2>
+
+        <p>Historically, Blue Note has principally been associated with the
+          "hard bop" style of jazz (mixing bebop with other forms of music
+          including soul, blues, rhythm and blues and gospel), but also recorded
+           essential albums in the avant-garde and free styles of jazz. Horace
+           Silver, Jimmy Smith, Freddie Hubbard, Lee Morgan, Art Blakey,
+           Grant Green, Hank Mobley, Wayne Shorter, Bobby Hutcherson, and
+           Jackie McLean were among the label's leading artists. During its
+           heyday, the 1950s and 1960s, the photography and graphic art of
+           Reid Miles created a series of iconic album covers, often
+           incorporating session photos by Francis Wolff, which added to
+           Blue Note's artistic reputation.  </p>
+
+        </div>
+
+        <div class="sectiondiv">
+
+        <h2 id="historyheader">History</h2>
+
+        <p>Historically, Blue Note has principally been associated with the
+          "hard bop" style of jazz (mixing bebop with other forms of music
+          including soul, blues, rhythm and blues and gospel), but also recorded
+           essential albums in the avant-garde and free styles of jazz. Horace
+           Silver, Jimmy Smith, Freddie Hubbard, Lee Morgan, Art Blakey,
+           Grant Green, Hank Mobley, Wayne Shorter, Bobby Hutcherson, and
+           Jackie McLean were among the label's leading artists. During its
+           heyday, the 1950s and 1960s, the photography and graphic art of
+           Reid Miles created a series of iconic album covers, often
+           incorporating session photos by Francis Wolff, which added to
+           Blue Note's artistic reputation.  </p>
+
+        </div>
+
+        <div class="sectiondiv">
+
+        <h2 id="legacyheader">Legacy</h2>
+
+        <p>Historically, Blue Note has principally been associated with the
+          "hard bop" style of jazz (mixing bebop with other forms of music
+          including soul, blues, rhythm and blues and gospel), but also recorded
+           essential albums in the avant-garde and free styles of jazz. Horace
+           Silver, Jimmy Smith, Freddie Hubbard, Lee Morgan, Art Blakey,
+           Grant Green, Hank Mobley, Wayne Shorter, Bobby Hutcherson, and
+           Jackie McLean were among the label's leading artists. During its
+           heyday, the 1950s and 1960s, the photography and graphic art of
+           Reid Miles created a series of iconic album covers, often
+           incorporating session photos by Francis Wolff, which added to
+           Blue Note's artistic reputation.  </p>
+
+        </div>
+
+        <div class="sectiondiv">
+
+        <h2 id="documentaryheader">Documentary Films</h2>
+
+        <p>Historically, Blue Note has principally been associated with the
+          "hard bop" style of jazz (mixing bebop with other forms of music
+          including soul, blues, rhythm and blues and gospel), but also recorded
+           essential albums in the avant-garde and free styles of jazz. Horace
+           Silver, Jimmy Smith, Freddie Hubbard, Lee Morgan, Art Blakey,
+           Grant Green, Hank Mobley, Wayne Shorter, Bobby Hutcherson, and
+           Jackie McLean were among the label's leading artists. During its
+           heyday, the 1950s and 1960s, the photography and graphic art of
+           Reid Miles created a series of iconic album covers, often
+           incorporating session photos by Francis Wolff, which added to
+           Blue Note's artistic reputation.  </p>
+           
+        </div>
+
+    <style>
     </style>
   </head>
   <body>
-    <h1>This is my Heading</h1>
-    <p>This is my Paragraph</p>
+
   </body>
 </html>
