adjustments to different areas
added banners, links, etc

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </ol>
       </div>
 
+      <br><br>
       <div class="sectiondiv">
 
         <h2 id="introheader">Introduction</h2>
@@ -41,6 +42,8 @@
            Blue Note's artistic reputation.  </p>
 
         </div>
+
+<br>
 
         <div class="sectiondiv">
 
@@ -60,6 +63,8 @@
 
         </div>
 
+        <br>
+
         <div class="sectiondiv">
 
         <h2 id="legacyheader">Legacy</h2>
@@ -78,6 +83,8 @@
 
         </div>
 
+        <br>
+
         <div class="sectiondiv">
 
         <h2 id="documentaryheader">Documentary Films</h2>
@@ -93,8 +100,10 @@
            Reid Miles created a series of iconic album covers, often
            incorporating session photos by Francis Wolff, which added to
            Blue Note's artistic reputation.  </p>
-           
+
         </div>
+
+        <h4><a href="aboutme.html">About the Author</a></h4>
 
     <style>
     </style>
