--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="#legacyheader">Legacy</a></li>
         <li><a href="#memberheader">Members</a></li>
         <li><a href="#discographyheader">Discography</a></li>
+        <li><a href="#linkheader">Links</a></li>
       </ol>
     </div>
 
@@ -28,17 +29,17 @@
     <div>
       <h2 id="historyheader">History</h2>
 
-      <p<p style="margin-left:10%;"> Without question the most intelligent, artistic rap group during the 1990s, A Tribe Called Quest jump-started and perfected the hip-hop alternative to hardcore and gangsta rap. In essence, they abandoned the macho posturing rap music had been constructed upon, and focused instead on abstract philosophy and message tracks. The "sucka MC" theme had never been completely ignored in hip-hop, but Tribe confronted numerous Black issues -- date rape, use of the N word, the trials and tribulations of the rap industry -- all of which overpowered the occasional game of the dozens. Just as powerful musically, Quest built upon De La Soul's jazz-rap revolution, basing tracks around laid-back samples instead of the played-out James Brown fests that many rappers had made a cottage industry by the late '80s. Comprising Q-Tip, Ali Shaheed Muhammad, and Phife, A Tribe Called Quest debuted in 1989 and released their first album one year later. Second album The Low End Theory was, quite simply, the most consistent and flowing hip-hop album ever recorded, though the trio moved closer to their harder contemporaries on 1993's Midnight Marauders. A spot on the 1994 Lollapalooza Tour showed their influence with the alternative crowd -- always a bedrock of A Tribe Called Quest's support -- but the group kept it real on 1996's Beats, Rhymes and Life, a dedication to the streets and the hip-hop underground.</p>
+<p<p style="margin-left:10%;"> Without question the most intelligent, artistic rap group during the 1990s, A Tribe Called Quest jump-started and perfected the hip-hop alternative to hardcore and gangsta rap. In essence, they abandoned the macho posturing rap music had been constructed upon, and focused instead on abstract philosophy and message tracks. The "sucka MC" theme had never been completely ignored in hip-hop, but Tribe confronted numerous Black issues -- date rape, use of the N word, the trials and tribulations of the rap industry -- all of which overpowered the occasional game of the dozens. Just as powerful musically, Quest built upon De La Soul's jazz-rap revolution, basing tracks around laid-back samples instead of the played-out James Brown fests that many rappers had made a cottage industry by the late '80s. Comprising Q-Tip, Ali Shaheed Muhammad, and Phife, A Tribe Called Quest debuted in 1989 and released their first album one year later. Second album <b>The Low End Theory</b> was, quite simply, the most consistent and flowing hip-hop album ever recorded, though the trio moved closer to their harder contemporaries on 1993's Midnight Marauders. A spot on the 1994 Lollapalooza Tour showed their influence with the alternative crowd -- always a bedrock of A Tribe Called Quest's support -- but the group kept it real on 1996's Beats, Rhymes and Life, a dedication to the streets and the hip-hop underground.</p>
 
 <p<p style="margin-left:10%;">A Tribe Called Quest was formed in 1988, though both Q-Tip (born Jonathan Davis) and Phife (born Malik Taylor) had grown up together in Queens. Q-Tip met DJ Ali Shaheed Muhammad while at high school and, after being named by the Jungle Brothers (who attended the same school), the trio began performing. A Tribe Called Quest's recording debut came in August 1989, when their "Description of a Fool" single appeared on a tiny area label (though Q-Tip had previously guested on several tracks from De La Soul's 3 Feet High and Rising and later appeared on Deee-Lite's "Groove Is in the Heart").</p>
 
-<p<p style="margin-left:10%;">Signed to Jive Records by 1989, A Tribe Called Quest released their first album, People's Instinctive Travels and the Paths of Rhythm, one year later. Much like De La Soul, Tribe looked more to jazz as well as '70s rock for their sample base -- "Can I Kick It?" plundered Lou Reed's classic "Walk on the Wild Side" and made it viable in a hip-hop context. No matter how solid their debut was, second album The Low End Theory outdid all expectations and has held up as perhaps the best hip-hop LP of all time.</p>
+<p<p style="margin-left:10%;">Signed to Jive Records by 1989, A Tribe Called Quest released their first album, <b>People's Instinctive Travels and the Paths of Rhythm</b>, one year later. Much like De La Soul, Tribe looked more to jazz as well as '70s rock for their sample base -- "Can I Kick It?" plundered Lou Reed's classic "Walk on the Wild Side" and made it viable in a hip-hop context. No matter how solid their debut was, second album <b>The Low End Theory</b> outdid all expectations and has held up as perhaps the best hip-hop LP of all time.</p>
 
-<p<p style="margin-left:10%;">The Low End Theory had included several tracks with props to hip-hop friends, and A Tribe Called Quest cemented their support of the rap community with 1993's Midnight Marauders. The album cover and booklet insert included the faces of more than 50 rappers -- including obvious choices such as De La Soul and the Jungle Brothers -- as well as mild surprises like the Beastie Boys, Ice-T, and Heavy D. Though impossible to trump Low End's brilliance, the LP offered several classics (including Tribe's most infectious single to date, "Award Tour") and a harder sound than the first two albums. During the summer of 1994, A Tribe Called Quest toured as the obligatory rap act on the Lollapalooza Festival lineup, and spent a quiet 1995, marked only by several production jobs for Q-Tip. They returned in 1996 with their fourth LP, Beats, Rhymes and Life, which prominently featured Q-Tip's nephew Consequence and production from Jay Dee (aka J Dilla). The album was nominated for a Grammy in the Best Rap Album category and reached platinum status.</p>
+<p<p style="margin-left:10%;"><b>The Low End Theory</b> had included several tracks with props to hip-hop friends, and A Tribe Called Quest cemented their support of the rap community with 1993's <b>Midnight Marauders</b>. The album cover and booklet insert included the faces of more than 50 rappers -- including obvious choices such as De La Soul and the Jungle Brothers -- as well as mild surprises like the Beastie Boys, Ice-T, and Heavy D. Though impossible to trump Low End's brilliance, the LP offered several classics (including Tribe's most infectious single to date, "Award Tour") and a harder sound than the first two albums. During the summer of 1994, A Tribe Called Quest toured as the obligatory rap act on the Lollapalooza Festival lineup, and spent a quiet 1995, marked only by several production jobs for Q-Tip. They returned in 1996 with their fourth LP, <b>Beats, Rhymes and Life</b>, which prominently featured Q-Tip's nephew Consequence and production from Jay Dee (aka J Dilla). The album was nominated for a Grammy in the Best Rap Album category and reached platinum status.</p>
 
-<p<p style="margin-left:10%;">Before they released their next album, 1998's The Love Movement, the group announced it would be their final album and that they were splitting up. Each member pursued solo careers to varying degrees of success, but the call of the band proved strong enough that they reunited many times over the years. They headlined the Rock the Bells concert in 2004, toured heavily in 2006, featured on the Rock the Bells tours of 2008 and 2010, and played a series of shows in 2013, including some with Kanye West in N.Y.C. Though at the time Q-Tip stated that this was the last time the group would play together, they reunited again in November 2015 to play The Tonight Show in conjunction with the 25th anniversary reissue of People's Instinctive Travels and the Paths of Rhythm.</p>
+<p<p style="margin-left:10%;">Before they released their next album, 1998's <b>The Love Movement</b>, the group announced it would be their final album and that they were splitting up. Each member pursued solo careers to varying degrees of success, but the call of the band proved strong enough that they reunited many times over the years. They headlined the Rock the Bells concert in 2004, toured heavily in 2006, featured on the Rock the Bells tours of 2008 and 2010, and played a series of shows in 2013, including some with Kanye West in N.Y.C. Though at the time Q-Tip stated that this was the last time the group would play together, they reunited again in November 2015 to play The Tonight Show in conjunction with the 25th anniversary reissue of People's Instinctive Travels and the Paths of Rhythm.</p>
 
-<p<p style="margin-left:10%;">Sadly, Tribe co-founder Phife -- suffering from diabetes for many years and the recipient of a liver transplant -- died in March 2016 at the age of 45. Later that year, Q-Tip announced that the group had finished a new album. The night of their Tonight Show appearance, the original four members of the group had decided to put aside their differences and start recording again. Sessions were held in Q-Tip's well-appointed home studio, and the group welcomed guests like Busta Rhymes, Elton John, Kendrick Lamar, and André 3000 to contribute. Though Phife passed before the album was finished, Q-Tip was able to power through and complete it. We Got It from Here... Thank You 4 Your Service was released in late 2016, topping the American charts and earning the group attention from a new generation of fans.</p>
+<p<p style="margin-left:10%;">Sadly, Tribe co-founder Phife -- suffering from diabetes for many years and the recipient of a liver transplant -- died in March 2016 at the age of 45. Later that year, Q-Tip announced that the group had finished a new album. The night of their Tonight Show appearance, the original four members of the group had decided to put aside their differences and start recording again. Sessions were held in Q-Tip's well-appointed home studio, and the group welcomed guests like Busta Rhymes, Elton John, Kendrick Lamar, and André 3000 to contribute. Though Phife passed before the album was finished, Q-Tip was able to power through and complete it. <b>We Got It from Here... Thank You 4 Your Service</b> was released in late 2016, topping the American charts and earning the group attention from a new generation of fans.</p>
 
     </div>
 <br>
@@ -52,6 +53,26 @@
 </div>
 <br>
 
+<div>
 <h2 id="memberheader">Members</h2>
+<ul>
+  <li>Kamaal Ibn John Fareed, born Jonathan William Davis, aka Q-Tip but also known as The Abstract</li>
+  <li>Malik Izaak Taylor, aka Phife Dawg or Phife</li>
+  <li>Ali Shaheed Muhammad</li>
+  <li>Jarobi White</li>
+  </ul>
+  </div>
+  <br>
+
+  <div>
+    <h2 id="discographyheader">Discography</h2>
+    <ul>
+      <li>People's Instinctive Travels and the Paths of Rhythm <i>(1990)</i></li>
+      <li>The Low End Theory <i>(1991)</i></li>
+      <li>Midnight Marauders <i>(1993)</i></li>
+      <li>Beats, Rhymes and Life <i>(1996)</i></li>
+      <li>The Love Movement <i>(1998)</i></li>
+      <li>We Got It from Here... Thank You 4 Your Service <i>(2016)</i></li>
+
   </body>
 </html>
