--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <img src="https://i.guim.co.uk/img/media/934d471df9e41e1d1d733a4d23feff54e05a6677/0_0_2560_1536/master/2560.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=c8f05240e9539d52aa08540eba40dcf5"
     width="450" alt="The Tribe">
 
+
     <div>
       <h2><u>Table of Contents</u></h2>
 
@@ -21,6 +22,7 @@
         <li><a href="#memberheader">Members</a></li>
         <li><a href="#discographyheader">Discography</a></li>
         <li><a href="#linkheader">Links</a></li>
+        <li><a href="#docuheader">Documentary</a></li>
       </ol>
     </div>
 
@@ -73,6 +75,25 @@
       <li>Beats, Rhymes and Life <i>(1996)</i></li>
       <li>The Love Movement <i>(1998)</i></li>
       <li>We Got It from Here... Thank You 4 Your Service <i>(2016)</i></li>
+    </div>
+
+    <div>
+      <h2 id="linkheader">Links</h2>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=WHRnvjCkTsw">Electric Relaxation</a></li>
+        <li><a href="https://www.youtube.com/watch?v=1QWEPdgS3As">Check The Rhime</a></li>
+        <li><a href="https://atribecalledquest.com/home/">Official Tribe Called Quest Website</a></li>
+    </div>
+
+    <br>
+    <h2 id="docuheader">Documentary</h2>
+    <iframe src="https://www.youtube.com/embed/e6u_K1WDB5I"></iframe>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <img src="https://images.squarespace-cdn.com/content/v1/5c475f7136099bab807042c6/1552583521107-4QCOESK3KP8D8A3FQUYN/Tribe+Called+Quest+3.jpg" width="450" alt="The Tribe">
 
   </body>
 </html>
