--- a/index.html
+++ b/index.html
@@ -1,100 +1,35 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="./master.css">
-    <meta charset="utf-8">
-    <title>The Tribe</title>
-  </head>
-  <!--This is the best rap group in the history of rap btw!!-->
-  <body>
+<html lang="en">
+<head>
+<title>CSS Template Example #2</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body style="background-color:#FBFFF1">
 
-    <h1>A Tribe Called Quest</h1>
-    <h3><i>As Told by Kevin Martinez</i></h3>
-    <img src="https://i.guim.co.uk/img/media/934d471df9e41e1d1d733a4d23feff54e05a6677/0_0_2560_1536/master/2560.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=c8f05240e9539d52aa08540eba40dcf5"
-    width="450" alt="The Tribe">
-
-
-    <div>
-      <h2><u>Table of Contents</u></h2>
-
-      <ol>
-        <li><a href="#historyheader">History</a></li>
-        <li><a href="#legacyheader">Legacy</a></li>
-        <li><a href="#memberheader">Members</a></li>
-        <li><a href="#discographyheader">Discography</a></li>
-        <li><a href="#linkheader">Links</a></li>
-        <li><a href="#docuheader">Documentary</a></li>
-      </ol>
+  <header>
+    <div class="logoHeader">
+      <img src="assets/KMLogo.png" width="200px">
     </div>
+  </header>
 
-    <br>
-
-    <div>
-      <h2 id="historyheader">History</h2>
-
-<p<p style="margin-left:10%;"> Without question the most intelligent, artistic rap group during the 1990s, A Tribe Called Quest jump-started and perfected the hip-hop alternative to hardcore and gangsta rap. In essence, they abandoned the macho posturing rap music had been constructed upon, and focused instead on abstract philosophy and message tracks. The "sucka MC" theme had never been completely ignored in hip-hop, but Tribe confronted numerous Black issues -- date rape, use of the N word, the trials and tribulations of the rap industry -- all of which overpowered the occasional game of the dozens. Just as powerful musically, Quest built upon De La Soul's jazz-rap revolution, basing tracks around laid-back samples instead of the played-out James Brown fests that many rappers had made a cottage industry by the late '80s. Comprising Q-Tip, Ali Shaheed Muhammad, and Phife, A Tribe Called Quest debuted in 1989 and released their first album one year later. Second album <b>The Low End Theory</b> was, quite simply, the most consistent and flowing hip-hop album ever recorded, though the trio moved closer to their harder contemporaries on 1993's Midnight Marauders. A spot on the 1994 Lollapalooza Tour showed their influence with the alternative crowd -- always a bedrock of A Tribe Called Quest's support -- but the group kept it real on 1996's Beats, Rhymes and Life, a dedication to the streets and the hip-hop underground.</p>
-
-<p<p style="margin-left:10%;">A Tribe Called Quest was formed in 1988, though both Q-Tip (born Jonathan Davis) and Phife (born Malik Taylor) had grown up together in Queens. Q-Tip met DJ Ali Shaheed Muhammad while at high school and, after being named by the Jungle Brothers (who attended the same school), the trio began performing. A Tribe Called Quest's recording debut came in August 1989, when their "Description of a Fool" single appeared on a tiny area label (though Q-Tip had previously guested on several tracks from De La Soul's 3 Feet High and Rising and later appeared on Deee-Lite's "Groove Is in the Heart").</p>
-
-<p<p style="margin-left:10%;">Signed to Jive Records by 1989, A Tribe Called Quest released their first album, <b>People's Instinctive Travels and the Paths of Rhythm</b>, one year later. Much like De La Soul, Tribe looked more to jazz as well as '70s rock for their sample base -- "Can I Kick It?" plundered Lou Reed's classic "Walk on the Wild Side" and made it viable in a hip-hop context. No matter how solid their debut was, second album <b>The Low End Theory</b> outdid all expectations and has held up as perhaps the best hip-hop LP of all time.</p>
-
-<p<p style="margin-left:10%;"><b>The Low End Theory</b> had included several tracks with props to hip-hop friends, and A Tribe Called Quest cemented their support of the rap community with 1993's <b>Midnight Marauders</b>. The album cover and booklet insert included the faces of more than 50 rappers -- including obvious choices such as De La Soul and the Jungle Brothers -- as well as mild surprises like the Beastie Boys, Ice-T, and Heavy D. Though impossible to trump Low End's brilliance, the LP offered several classics (including Tribe's most infectious single to date, "Award Tour") and a harder sound than the first two albums. During the summer of 1994, A Tribe Called Quest toured as the obligatory rap act on the Lollapalooza Festival lineup, and spent a quiet 1995, marked only by several production jobs for Q-Tip. They returned in 1996 with their fourth LP, <b>Beats, Rhymes and Life</b>, which prominently featured Q-Tip's nephew Consequence and production from Jay Dee (aka J Dilla). The album was nominated for a Grammy in the Best Rap Album category and reached platinum status.</p>
-
-<p<p style="margin-left:10%;">Before they released their next album, 1998's <b>The Love Movement</b>, the group announced it would be their final album and that they were splitting up. Each member pursued solo careers to varying degrees of success, but the call of the band proved strong enough that they reunited many times over the years. They headlined the Rock the Bells concert in 2004, toured heavily in 2006, featured on the Rock the Bells tours of 2008 and 2010, and played a series of shows in 2013, including some with Kanye West in N.Y.C. Though at the time Q-Tip stated that this was the last time the group would play together, they reunited again in November 2015 to play The Tonight Show in conjunction with the 25th anniversary reissue of People's Instinctive Travels and the Paths of Rhythm.</p>
-
-<p<p style="margin-left:10%;">Sadly, Tribe co-founder Phife -- suffering from diabetes for many years and the recipient of a liver transplant -- died in March 2016 at the age of 45. Later that year, Q-Tip announced that the group had finished a new album. The night of their Tonight Show appearance, the original four members of the group had decided to put aside their differences and start recording again. Sessions were held in Q-Tip's well-appointed home studio, and the group welcomed guests like Busta Rhymes, Elton John, Kendrick Lamar, and André 3000 to contribute. Though Phife passed before the album was finished, Q-Tip was able to power through and complete it. <b>We Got It from Here... Thank You 4 Your Service</b> was released in late 2016, topping the American charts and earning the group attention from a new generation of fans.</p>
-
-    </div>
-<br>
-
-<div>
-  <h2 id="legacyheader">Legacy</h2>
-
-  <p<p style="margin-left:10%;">At a time when James Brown drum breaks and P-Funk basslines dominated hip hop production, the group successfully bridged the gap between jazz and hip hop, incorporating bebop and hard bop samples and recording with double bassist Ron Carter. The group's production influenced their contemporaries, thus changing the sound of hip hop; Dr. Dre produced his highly regarded debut The Chronic after being inspired by The Low End Theory, and Pete Rock stated, "There were times when I would walk into a record store and see Tip sitting on the floor with his glasses on, going through albums, looking for beats  ... I was like, 'This guy is serious.' Being around [the group] made me step up and become even more serious than I was." Houston rapper Scarface mentioned A Tribe Called Quest as the group that made him want to rap.</p>
-
-<p<p style="margin-left:10%;">Lyrically, A Tribe Called Quest has been regarded for addressing many social issues through Q-Tip's philosophical viewpoints and Phife Dawg's everyman perspectives. Kierna Mayo, former editor-in-chief of Ebony, said that The Low End Theory and Midnight Marauders "gave birth to neo-everything. ... That entire class of D'Angelo, Erykah Badu, Maxwell, and Lauryn Hill—and moving on to André 3000, Kanye West, and Talib Kweli—everything that is left of everything begins with Tribe." The group has also been credited for helping launch the solo careers of Busta Rhymes, J Dilla and Consequence.</p>
+<div class="sidenav" span style="font-family:avenir">
+  <a href="#">Home</a>
+  <a href="#">About Me</a>
+  <a href="#">Photography</a>
+  <a href="#">Illustrations</a>
+  <a href="#">Design</a>
 </div>
-<br>
 
-<div>
-<h2 id="memberheader">Members</h2>
-<ul>
-  <li>Kamaal Ibn John Fareed, born Jonathan William Davis, aka Q-Tip but also known as The Abstract</li>
-  <li>Malik Izaak Taylor, aka Phife Dawg or Phife</li>
-  <li>Ali Shaheed Muhammad</li>
-  <li>Jarobi White</li>
-  </ul>
-  </div>
-  <br>
+<div class="content">
+  <h2 span style="font-family:avenir">KM Designs</h2>
+  <p span style="font-family:avenir">Hello, I'm Kevin Martinez, and this is my Portfolio. </p>
+</div>
 
-  <div>
-    <h2 id="discographyheader">Discography</h2>
-    <ul>
-      <li>People's Instinctive Travels and the Paths of Rhythm <i>(1990)</i></li>
-      <li>The Low End Theory <i>(1991)</i></li>
-      <li>Midnight Marauders <i>(1993)</i></li>
-      <li>Beats, Rhymes and Life <i>(1996)</i></li>
-      <li>The Love Movement <i>(1998)</i></li>
-      <li>We Got It from Here... Thank You 4 Your Service <i>(2016)</i></li>
-    </div>
+<footer>
+  <p>KM Designs</p>
+</footer>
 
-    <div>
-      <h2 id="linkheader">Links</h2>
-      <ul>
-        <li><a href="https://www.youtube.com/watch?v=WHRnvjCkTsw">Electric Relaxation</a></li>
-        <li><a href="https://www.youtube.com/watch?v=1QWEPdgS3As">Check The Rhime</a></li>
-        <li><a href="https://atribecalledquest.com/home/">Official Tribe Called Quest Website</a></li>
-    </div>
-
-    <br>
-    <h2 id="docuheader">Documentary</h2>
-    <iframe src="https://www.youtube.com/embed/e6u_K1WDB5I"></iframe>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <img src="https://images.squarespace-cdn.com/content/v1/5c475f7136099bab807042c6/1552583521107-4QCOESK3KP8D8A3FQUYN/Tribe+Called+Quest+3.jpg" width="450" alt="The Tribe">
-
-  </body>
+</body>
 </html>
