--- a/index.html
+++ b/index.html
@@ -15,20 +15,33 @@
   </header>
 
 <div class="sidenav" span style="font-family:avenir">
-  <a href="#">Home</a>
-  <a href="#">About Me</a>
-  <a href="#">Photography</a>
-  <a href="#">Illustrations</a>
-  <a href="#">Design</a>
+  <a href="index.html">Home</a>
+  <a href="aboutme.html">About Me</a>
+  <a href="photography.html">Photography</a>
+  <a href="illustrations.html">Illustrations</a>
+  <a href="design.html">Design</a>
 </div>
 
 <div class="content">
   <h2 span style="font-family:avenir">KM Designs</h2>
-  <p span style="font-family:avenir">Hello, I'm Kevin Martinez, and this is my Portfolio. </p>
+  <p span style="font-family:avenir">Hello, I'm Kevin Martinez, and this is my Portfolio. I have experience in a little bit of everything, from photoshop to photography to web design. Click on a link to the left to get started or fill out the form below to get in touch!</p>
 </div>
 
+<form action="./php_form_action.php" method="post">
+  <fieldset>
+    <legend>Account Creation</legend>
+    <label>Username</label>
+    <input type="text" name="uName" value="Big Chungus"/>
+    <br/>
+    <label for="gender">Gender Select</label> <br/>
+    <input type="radio" name="gender"/> Male <br/>
+    <input type="radio" name="gender"/> Female <br/>
+    <input type="radio" name="gender"/> Other <br/>
+  </fieldset>
+
+
 <footer>
-  <p>KM Designs</p>
+  <p> &copy KM Designs by Kevin Martinez</p>
 </footer>
 
 </body>
