added form stuff
changed values & added buttons

--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
 
 <form action="./php_form_action.php" method="post">
   <fieldset>
-    <legend>Account Creation</legend>
-    <label>Username</label>
-    <input type="text" name="uName" value="Big Chungus"/>
+    <legend>General Inquiry</legend>
+    <label>Name</label>
+    <input type="text" name="name"/>
     <br/>
-    <label for="gender">Gender Select</label> <br/>
-    <input type="radio" name="gender"/> Male <br/>
-    <input type="radio" name="gender"/> Female <br/>
-    <input type="radio" name="gender"/> Other <br/>
+    <br/>
+    <label>E-Mail Adress</label>
+    <input type="text" name="email"/>
+    <br/>
+    <br/>
+    Comments/Information About Project <br/>
+    <input type="text" name="comments" size="100">
+
   </fieldset>
 
 
