--- a/index.html
+++ b/index.html
@@ -24,22 +24,26 @@
 
 <div class="content">
   <h2 span style="font-family:avenir">KM Designs</h2>
-  <p span style="font-family:avenir">Hello, I'm Kevin Martinez, and this is my Portfolio. I have experience in a little bit of everything, from photoshop to photography to web design. Click on a link to the left to get started or fill out the form below to get in touch!</p>
+  <p span style="font-family:avenir">Hi there! I'm Kevin Martinez, and this is my Portfolio. I have experience in a little bit of everything, from photoshop to photography to web design. Click on a link to the left to get started or fill out the form below to get in touch!</p>
 </div>
 
 <form action="./php_form_action.php" method="post">
   <fieldset>
     <legend>General Inquiry</legend>
-    <label>Name</label>
+    <label>Name</label><br/>
     <input type="text" name="name"/>
     <br/>
     <br/>
-    <label>E-Mail Adress</label>
+    <label>E-Mail Adress</label><br/>
     <input type="text" name="email"/>
     <br/>
     <br/>
     Comments/Information About Project <br/>
-    <input type="text" name="comments" size="100">
+    <textarea>
+    </textarea>
+    <br/>
+    <input type="submit" value="Submit">
+    <input type="reset" value="Clear">
 
   </fieldset>
 
