--- a/design.html
+++ b/design.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Design</title>
   </head>
-  <body>
+  <body style="background-color:#FBFFF1">
     <h1 span style="font-family:avenir">Design</h1>
 
   </body>
