--- a/design.html
+++ b/design.html
@@ -6,7 +6,18 @@
     <title>Design</title>
   </head>
   <body style="background-color:#FBFFF1">
-    <h1 span style="font-family:avenir">Design</h1>
+
+    <div class="sidenav" span style="font-family:avenir">
+      <a href="index.html">Home</a>
+      <a href="aboutme.html">About Me</a>
+      <a href="photography.html">Photography</a>
+      <a href="illustrations.html">Illustrations</a>
+      <a href="design.html">Design</a>
+    </div>
+
+    <div class="content">
+      <h1 span style="font-family:avenir">Design</h1>
+    </div>
 
   </body>
 </html>
