headers & photo page
changed the size of main page header and added subtitle to photography page

--- a/photography.html
+++ b/photography.html
@@ -16,8 +16,21 @@
     </div>
 
 
-    <div class="content">
+    <div class="content" span style="font-family:avenir">
       <h1 span style="font-family:avenir">Photography</h1>
     </div>
+
+    <div class="content" span style="font-family:avenir">
+      <h2 class="phototypes">Landscape</h2>
+    </div>
+
+    <div class="content" span style="font-family:avenir">
+      <h2 class="phototypes">Graduation</h2>
+    </div>
+
+    <div class="content" span style="font-family:avenir">
+      <h2 class="phototypes">Baby Birthday</h2>
+    </div>
+
   </body>
 </html>
