--- a/photography.html
+++ b/photography.html
@@ -22,14 +22,69 @@
 
     <div class="content" span style="font-family:avenir">
       <h2 class="phototypes">Landscape</h2>
+        <div class="grid-container">
+          <div class="grid-item">
+            <img src="./assets/IMG_0052.JPG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0073.JPG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0628.JPG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0681.JPG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0661.JPG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0667.JPG" width="300">
+          </div>
+        </div>
     </div>
 
     <div class="content" span style="font-family:avenir">
       <h2 class="phototypes">Graduation</h2>
+        <div class="grid-container">
+          <div class="grid-item">
+            <img src="./assets/IMG_0234.JPeG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0244.JPeG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0262.JPeG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0386.JPeG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0387.JPG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0392.JPeG" width="300">
+          </div>
+        </div>
+
     </div>
 
     <div class="content" span style="font-family:avenir">
-      <h2 class="phototypes">Baby Birthday</h2>
+      <h2 class="phototypes">Baby Birthday/Product Photography</h2>
+        <div class="grid-container1">
+          <div class="grid-item">
+            <img src="./assets/IMG_0495.JPeG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0515.JPeG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0104.JPG" width="300">
+          </div>
+          <div class="grid-item">
+            <img src="./assets/IMG_0107.JPG" width="300">
+          </div>
+        </div>
     </div>
 
   </body>
