--- a/photography.html
+++ b/photography.html
@@ -43,7 +43,8 @@
           </div>
         </div>
     </div>
-
+    <br/>
+    <br/>
     <div class="content" span style="font-family:avenir">
       <h2 class="phototypes">Graduation</h2>
         <div class="grid-container">
@@ -66,9 +67,9 @@
             <img src="./assets/IMG_0392.JPeG" width="300">
           </div>
         </div>
-
-    </div>
-
+      </div>
+      <br/>
+      <br/>
     <div class="content" span style="font-family:avenir">
       <h2 class="phototypes">Baby Birthday/Product Photography</h2>
         <div class="grid-container1">
@@ -86,6 +87,10 @@
           </div>
         </div>
     </div>
+
+    <footer>
+      <p> &copy KM Designs by Kevin Martinez</p>
+    </footer>
 
   </body>
 </html>
