--- a/design.html
+++ b/design.html
@@ -19,5 +19,9 @@
       <h1 span style="font-family:avenir">Design</h1>
     </div>
 
+    <footer>
+      <p> &copy KM Designs by Kevin Martinez</p>
+    </footer>
+
   </body>
 </html>
