--- a/photography.html
+++ b/photography.html
@@ -49,22 +49,22 @@
       <h2 class="phototypes">Graduation</h2>
         <div class="grid-container">
           <div class="grid-item">
-            <img src="./assets/IMG_0234.JPeG" width="300">
+            <img src="./assets/IMG_0234.jpeg" width="300">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0244.JPeG" width="300">
+            <img src="./assets/IMG_0244.jpeg" width="300">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0262.JPeG" width="300">
+            <img src="./assets/IMG_0262.jpeg" width="300">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0386.JPeG" width="300">
+            <img src="./assets/IMG_0386.jpeg" width="300">
           </div>
           <div class="grid-item">
             <img src="./assets/IMG_0387.JPG" width="300">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0392.JPeG" width="300">
+            <img src="./assets/IMG_0392.jpeg" width="300">
           </div>
         </div>
       </div>
@@ -74,10 +74,10 @@
       <h2 class="phototypes">Baby Birthday/Product Photography</h2>
         <div class="grid-container1">
           <div class="grid-item">
-            <img src="./assets/IMG_0495.JPeG" width="300">
+            <img src="./assets/IMG_0495.jpeg" width="300">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0515.JPeG" width="300">
+            <img src="./assets/IMG_0515.jpeg" width="300">
           </div>
           <div class="grid-item">
             <img src="./assets/IMG_0104.JPG" width="300">
