--- a/photography.html
+++ b/photography.html
@@ -61,7 +61,7 @@
             <img src="./assets/IMG_0386.jpeg" width="300">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0387.JPG" width="300">
+            <img src="./assets/IMG_0387.jpg" width="300">
           </div>
           <div class="grid-item">
             <img src="./assets/IMG_0392.jpeg" width="300">
