--- a/index.html
+++ b/index.html
@@ -28,25 +28,24 @@
 </div>
 
 <form action="./php_form_action.php" method="post">
-  <fieldset>
-    <legend>General Inquiry</legend>
-    <label>Name</label><br/>
-    <input type="text" name="name"/>
-    <br/>
-    <br/>
-    <label>E-Mail Adress</label><br/>
-    <input type="text" name="email"/>
-    <br/>
-    <br/>
-    Comments/Information About Project <br/>
-    <textarea>
-    </textarea>
-    <br/>
-    <input type="submit" value="Submit">
-    <input type="reset" value="Clear">
-
-  </fieldset>
-
+    <fieldset>
+      <legend>General Inquiry</legend>
+      <label>Name</label><br/>
+      <input type="text" name="name"/>
+      <br/>
+      <br/>
+      <label>E-Mail Adress</label><br/>
+      <input type="text" name="email"/>
+      <br/>
+      <br/>
+      Comments/Information About Project <br/>
+      <textarea>
+      </textarea>
+      <br/>
+      <input type="submit" value="Submit">
+      <input type="reset" value="Clear">
+    </fieldset>
+</form>
 
 <footer>
   <p> &copy KM Designs by Kevin Martinez</p>
