--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header>
     <div class="logoHeader">
-      <img src="assets/KMLogo.png" width="200px">
+      <img src="assets/KMLogo.png" width="200px" alt="KM Designs Logo">
     </div>
   </header>
 
