--- a/photography.html
+++ b/photography.html
@@ -24,22 +24,22 @@
       <h2 class="phototypes">Landscape</h2>
         <div class="grid-container">
           <div class="grid-item">
-            <img src="./assets/IMG_0052.JPG" width="300">
+            <img src="./assets/IMG_0052.JPG" width="300" alt="Oregon">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0073.JPG" width="300">
+            <img src="./assets/IMG_0073.JPG" width="300" alt="Oregon">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0628.JPG" width="300">
+            <img src="./assets/IMG_0628.JPG" width="300" alt="Kirkwood, CA">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0681.JPG" width="300">
+            <img src="./assets/IMG_0681.JPG" width="300" alt="Santa Catalina Island, Avalon, CA">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0661.JPG" width="300">
+            <img src="./assets/IMG_0661.JPG" width="300" alt="Kirkwood, CA">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0667.JPG" width="300">
+            <img src="./assets/IMG_0667.JPG" width="300" alt="Kirkwood, CA">
           </div>
         </div>
     </div>
@@ -49,41 +49,41 @@
       <h2 class="phototypes">Graduation</h2>
         <div class="grid-container">
           <div class="grid-item">
-            <img src="./assets/IMG_0234.jpeg" width="300">
+            <img src="./assets/IMG_0234.jpeg" width="300" alt="tassel">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0244.jpeg" width="300">
+            <img src="./assets/IMG_0244.jpeg" width="300" alt="glitter">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0262.jpeg" width="300">
+            <img src="./assets/IMG_0262.jpeg" width="300" alt="jump">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0387.jpg" width="300">
+            <img src="./assets/IMG_0387.jpg" width="300" alt="front angle top hat">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0386.jpeg" width="300">
+            <img src="./assets/IMG_0386.jpeg" width="300" alt="single hand hat hold">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0392.jpeg" width="300">
+            <img src="./assets/IMG_0392.jpeg" width="300" alt="double hand back angle hold">
           </div>
         </div>
-      </div>
+    </div>
       <br/>
       <br/>
     <div class="content" span style="font-family:avenir">
       <h2 class="phototypes">Baby Birthday/Product Photography</h2>
         <div class="grid-container1">
           <div class="grid-item">
-            <img src="./assets/IMG_0495.jpeg" width="300">
+            <img src="./assets/IMG_0495.jpeg" width="300" alt="Outdoor Aliyah">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0515.jpeg" width="300">
+            <img src="./assets/IMG_0515.jpeg" width="300" alt="Indoor Aliyah">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0104.JPG" width="300">
+            <img src="./assets/IMG_0104.JPG" width="300" alt="Supreme Lighter #1">
           </div>
           <div class="grid-item">
-            <img src="./assets/IMG_0107.JPG" width="300">
+            <img src="./assets/IMG_0107.JPG" width="300" alt="Supreme Lighter #2">
           </div>
         </div>
     </div>
