--- a/illustrations.html
+++ b/illustrations.html
@@ -15,8 +15,12 @@
       <a href="design.html">Design</a>
     </div>
 
-    <div class="content">
-      <h1 span style="font-family:avenir">Illustrations</h1>
+    <div class="content" span style="font-family:avenir">
+      <h1>Illustrations</h1>
+        <h2 class="phototypes">Book Covers</h2>
+          <img src="./assets/bookDesign.jpg" width="1150">
+          <img src="./assets/bookDesign1.jpg" width="1150">
+
     </div>
 
     <footer>
