--- a/design.html
+++ b/design.html
@@ -15,8 +15,20 @@
       <a href="design.html">Design</a>
     </div>
 
-    <div class="content">
-      <h1 span style="font-family:avenir">Design</h1>
+    <div class="content" span style="font-family:avenir">
+      <h1>Design</h1>
+        <div>
+          <h2 class="phototypes">GUCCI Fashion Brochure</h2>
+            <img src="./assets/gucci.jpg" width="1150">
+            <img src="./assets/gucci2.jpg" width="1150">
+            <img src="./assets/gucci3.jpg" width="1150">
+            <img src="./assets/gucci4.jpg" width="1150">
+        </div>
+        <br/>
+        <div>
+          <h2 class="phototypes">App Design</h2>
+            <img src="./assets/wya.jpg" width="1150">
+
     </div>
 
     <footer>
