--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <input type="text" name="name"/>
       <br/>
       <br/>
-      <label>E-Mail Adress</label><br/>
+      <label>E-Mail Address</label><br/>
       <input type="text" name="email"/>
       <br/>
       <br/>
