--- a/illustrations.html
+++ b/illustrations.html
@@ -17,12 +17,18 @@
 
     <div class="content" span style="font-family:avenir">
       <h1>Illustrations</h1>
-        <h2 class="phototypes">Book Covers</h2>
-          <img src="./assets/bookDesign.jpg" width="1150">
-          <img src="./assets/bookDesign1.jpg" width="1150">
+        <div>
+          <h2 class="phototypes">Book Covers</h2>
+            <img src="./assets/bookDesign.jpg" width="700">
+            <img src="./assets/bookDesign1.jpg" width="700">
+        </div>
+        <br/>
+        <br/>
+        <div>
+          <h2 class="phototypes">Icon Design</h2>
+            <img src="./assets/IconDesign.jpg" width="700">
 
     </div>
-
     <footer>
       <p> &copy KM Designs by Kevin Martinez</p>
     </footer>
